style: text overflow fixed

--- a/src/components/CardTemplate/style.scss
+++ b/src/components/CardTemplate/style.scss
@@ -116,6 +116,14 @@
                     }
                 }
             }
+
+            .content {
+                overflow: hidden;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 5;
+                line-clamp: 5;
+            }
         }
     }
 }
